--- a/flask-application/requirements.txt
+++ b/flask-application/requirements.txt
@@ -1,1 +1,5 @@
 flask
+sqlalchemy
+psycopg2-binary #we use psycopg2-binary to query postgres with sqlalchemy
+Flask-SQLAlchemy #not sure if its better to use this, vs sqlalchemy - and/or which actually gets used
+flask_cors #this would needed be if our flask app is serving the react app...which it might be in simple deployments
