--- a/flask-application/Dockerfile
+++ b/flask-application/Dockerfile
@@ -1,12 +1,14 @@
-# You will use python:3.10-alpine as the base image for building the Flask container
+# base image for building the Flask container
 FROM python:3.10-alpine
-# It specifies the working directory where the Docker container will run
-WORKDIR /app
+# working directory where the Docker container will run. 
+# Note: originally, with EC2 setup, deployed the app to run from /flaskapp/helloec2rdsipaddress.  
+# ...Not the case with this container impementation.
+WORKDIR /helloec2rdsipaddress 
 # Copying all the application files to the working directory
-COPY . .
+COPY . /helloec2rdsipaddress/
 # Install all the dependencies required to run the Flask application
 RUN pip install -r requirements.txt
-# Expose the Docker container for the application to run on port 5000
-EXPOSE 5000
+# Expose the Docker container for the application to run port
+EXPOSE 8080
 # The command required to run the Dockerised application
-CMD ["python", "/app/app.py"]
+CMD ["python", "/helloec2rdsipaddress/app.py"]
